Update fc_nav_tabs 20/2

--- a/Test02/Views/PhongKho/ChiTietKho.cshtml
+++ b/Test02/Views/PhongKho/ChiTietKho.cshtml
@@ -125,7 +125,7 @@
                 </div>
             </div>
             <div>
-                <a class="btn btn-danger btn-sm" href="/PhongKho/QuanLyKho" title="Trở lại">
+                <a class="btn btn-outline-danger btn-sm" href="~/PhongKho/QuanLyKho" title="Trở lại">
                     <i class="fas fa-retweet"></i>
                     Trở lại danh sách kho
                 </a>
