--- a/Test02/Views/PhongKho/EditCTKho.cshtml
+++ b/Test02/Views/PhongKho/EditCTKho.cshtml
@@ -1,5 +1,4 @@
-﻿
-@model Test02.Models.ChiTietKho
+﻿@model Test02.Models.ChiTietKho
 @{
     ViewBag.Title = "EditCTKho";
     Layout = "~/Views/PhongKho/Layout/_LayoutPage1.cshtml";
@@ -17,10 +16,11 @@
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     @Html.HiddenFor(model => model.MaCTKho)
+    @Html.HiddenFor(model => model.NgayNhap)
 
     <div class="form-group">
-        @Html.LabelFor(model => model.MaSP, "Tên sản phẩm", htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
+        @Html.LabelFor(model => model.MaSP, "Tên sản phẩm:", htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-12">
             @Html.DropDownList("MaSP", null, htmlAttributes: new { @class = "form-control" })
             @Html.ValidationMessageFor(model => model.MaSP, "", new { @class = "text-danger" })
         </div>
@@ -35,39 +35,37 @@
         </div>*@
 
     <div class="form-group">
-        @Html.LabelFor(model => model.NgayNhap, "Ngày nhập", htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.NgayNhap, new { htmlAttributes = new { @class = "form-control" } })
+        @Html.LabelFor(model => model.NgayNhap, "Ngày nhập:", htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-12">
+            @Html.DisplayFor(model => model.NgayNhap)
             @Html.ValidationMessageFor(model => model.NgayNhap, "", new { @class = "text-danger" })
         </div>
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.NgayXuat, "Ngày xuất gần nhất", htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.NgayXuat, new { htmlAttributes = new { @class = "form-control" } })
+        @Html.LabelFor(model => model.NgayXuat, "Ngày xuất:", htmlAttributes: new { @class = "control-label col-md-1" }) @Html.DisplayFor(model => model.NgayXuat)<span> (Ngày xuất gần nhất)</span>
+        <div class="col-md-12">
+            <input class="form-control text-box single-line" data-val="true" data-val-date="The field NgayXuat must be a date." id="NgayXuat" name="NgayXuat" type="datetime-local" required>
             @Html.ValidationMessageFor(model => model.NgayXuat, "", new { @class = "text-danger" })
         </div>
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.SoLuong, "Số lượng trong kho", htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
+        @Html.LabelFor(model => model.SoLuong, "Số lượng trong kho:", htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-12">
             @Html.EditorFor(model => model.SoLuong, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.SoLuong, "", new { @class = "text-danger" })
         </div>
     </div>
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Lưu chi tiết kho @Model.MaCTKho" class="btn btn-add" />
-            </div>
-        </div>
-        <div>
-            <a class="btn btn-outline-dark btn-sm" href="~/PhongKho/ChiTietKho/@Model.MaKho" title="Trở lại">
+    <div class="form-group">
+        <div class="col-md-offset-5 col-md-10">
+            <input type="submit" value="Lưu chi tiết kho @Model.MaCTKho" class="btn btn-outline-success" />
+            <a class="btn btn-outline-dark btn-sm" href="~/PhongKho/ChiTietKho/@Model.MaKho">
                 <i class="fas fa-retweet"></i>
-                Trở lại 
+                Trở lại
             </a>
         </div>
+    </div>
 </div>
 }
