--- a/Test02/Views/KhachHang/Layout/_LayoutKhachHang.cshtml
+++ b/Test02/Views/KhachHang/Layout/_LayoutKhachHang.cshtml
@@ -76,7 +76,7 @@
             <li>
                 <a class="app-menu__item @ViewBag.gh" href="~/KhachHang/GioHangDL">
                     <i class='app-menu__icon bx bxs-package'></i>
-                    <span class="app-menu__label">Giỏ hàng</span>
+                    <span class="app-menu__label">Đặt hàng</span>
                 </a>
             </li>
             <li>
