--- a/Test02/Views/KeToan/ChitietCN.cshtml
+++ b/Test02/Views/KeToan/ChitietCN.cshtml
@@ -59,10 +59,10 @@
                                 }
                                 @for (int i = 0; i < donhang.Count; i++)
                                 {
-                                    DateTime ngayhd = (DateTime)(donhang[i].NgayLap);
+                                   
 
 
-                                    if ((donhang[i].MaDL == Model.MaDL) && ngay.Month == ngayhd.Month)
+                                    if ((donhang[i].MaDL == Model.MaDL))
                                     {
                                         <tr>
 
