--- a/Test02/Views/KeToan/Layout/_LayoutPageKeToan.cshtml
+++ b/Test02/Views/KeToan/Layout/_LayoutPageKeToan.cshtml
@@ -6,6 +6,7 @@
     <title>@ViewBag.Title</title>
     <!-- Main CSS-->
     <link rel="stylesheet" href="~/Content/Test01/main.css">
+    
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
     <!-- or -->
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
@@ -15,7 +16,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/2.1.2/sweetalert.min.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.2/jquery-confirm.min.css">
-
+    
 
 </head>
 <body onload="time()" class="app sidebar-mini rtl">
@@ -73,8 +74,8 @@
                 </a>
             </li>*@
             <li>
-                <a class="app-menu__item  @ViewBag.qlhd" href="~/KeToan/QLHoaDon">
-                    <i class='app-menu__icon bx bx-cart-alt'></i> <span class="app-menu__label">Quản lý hóa đơn</span>
+                <a class="app-menu__item  @ViewBag.qlhd" href="~/KeToan/QLDonHang">
+                    <i class='app-menu__icon bx bx-cart-alt'></i> <span class="app-menu__label">Đơn hàng </span>
                 </a>
             </li>
             <li>
