ketoan-fronend dsdaily-26/2

--- a/Test02/Views/KeToan/QLDonHang.cshtml
+++ b/Test02/Views/KeToan/QLDonHang.cshtml
@@ -110,15 +110,17 @@
                                                 </td>
                                                 <td>
 
-                                                    <a href="/KeToan/ChinhsuaHD/@item.MaDH" class="btn btn-outline-primary btn-sm">
+                                                    <a href="/KeToan/ChinhsuaHD/@item.MaDH" class="notification btn-outline-primary btn-sm">
                                                         <i class="fa fa-edit"></i>
                                                     </a>
-                                                    @*<a href="/KeToan/XoaHD/@item.MaHD" class="btn btn-primary btn-sm trash">
-                                                        <i class="fas fa-trash-alt"></i>
-                                                    </a>*@
+                                                    <a href="#" class="notification">
+                                                        <span>Inbox</span>
+                                                        <span class="badge">3</span>
+                                                    </a>
                                                     <a href="/KeToan/XuatHDBH/@item.MaDH" class="btn btn-outline-primary btn-sm">
                                                         <i class="fas fa-train"></i>
                                                     </a>
+
                                                 </td>
 
                                             </tr>
