--- a/Test02/Views/KeToan/DSDaiLy.cshtml
+++ b/Test02/Views/KeToan/DSDaiLy.cshtml
@@ -8,7 +8,7 @@
     QuanLyDLEntities2 database = new QuanLyDLEntities2();
     List<PhieuCongNo> congno = database.PhieuCongNoes.ToList();
 }
-
+<link href="~/Views/KeToan/Layout/ketoan.css" rel="stylesheet" />
 <div class="row">
     <div class="col-md-12">
         <div class="tile">
@@ -16,16 +16,11 @@
 
                 <div class="row element-button">
                     <div class="col-sm-2">
-                        <a class="btn btn-delete btn-sm nhap-tu-file" href=""><i class="fas fa-file-upload"></i> Thêm mới hồ sơ</a>
-                    </div>
-                    <div class="col-sm-2">
                         <a class="btn btn-delete btn-sm print-file" title="In" onclick="myApp.printTable()">
                             <i class="fas fa-print"></i> In dữ liệu
                         </a>
                     </div>
-                    <div class="col-sm-2">
-                        <a class="btn btn-delete btn-sm print-file" type="button" title="Sao chép" href="~/KeToan/DSDaily"><i class="fas fa-copy"></i> Làm mới danh sách</a>
-                    </div>
+         
 
                 </div>
          
@@ -48,7 +43,7 @@
                                         <th width="300" class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Tên đại lý:: activate to sort column ascending" style="width: 150px;">Tên đại lý</th>
                                         <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="SĐT: activate to sort column ascending" style="width: 160px;">Loại đại lý</th>
                                         <th width="300" class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Tên đại lý:: activate to sort column ascending" style="width: 150px;">Tổng công nợ</th>
-                                        <th width="100" class="sorting" tabindex="0" rowspan="1" colspan="1" aria-label="Tính năng: activate to sort column ascending" style="width: 110px;">Chức năng</th>
+                                        <th width="100" class="sorting" tabindex="0" rowspan="1" colspan="1" aria-label="Tính năng: activate to sort column ascending" style="width: 80px;">Chức năng</th>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -87,9 +82,18 @@
 
                                         <td>
 
-                                            <a href="~/KeToan/CongnoDL/@item.MaDL" class="btn btn-primary btn-sm edit">
+                                            @*<a href="~/KeToan/CongnoDL/@item.MaDL" class="btn btn-outline-primary btn-sm" ata-toggle="tooltip" title="Danh sách đơn hàng">
                                                 <i class="fa fa-edit"></i>
+                                                <span class="badge">3</span>
                                             </a>
+                                            <a href="#" class="btn btn-outline-primary btn-sm" ata-toggle="tooltip" title="Chi tiết công nợ">
+                                                <i class="fa fa-receipt"></i>
+                                            </a>*@
+
+                                            <button type="button" class="icon-button">
+                                                <span class="material-icons">notifications</span>
+                                                <span class="icon-button__badge">2</span>
+                                            </button>
 
                                         </td>
                                     </tr>
@@ -121,6 +125,12 @@
         $('#sampleTable tbody :checkbox').prop('checked', $(this).is(':checked'));
         e.stopImmediatePropagation();
     });
+
+   // hien thi notification button
+        $(document).ready(function(){
+            $('[data-toggle="tooltip"]').tooltip();
+});
+
 </script>
 
 
