--- a/Test02/Views/KeToan/Layout/_LayoutPageKeToan.cshtml
+++ b/Test02/Views/KeToan/Layout/_LayoutPageKeToan.cshtml
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.2/jquery-confirm.min.css">
     
-
+    <link href="~/Views/KeToan/Layout/ketoan.css" rel="stylesheet" />
 </head>
 <body onload="time()" class="app sidebar-mini rtl">
     <!-- Navbar-->
