--- a/Test02/Views/KeToan/DSDaiLy.cshtml
+++ b/Test02/Views/KeToan/DSDaiLy.cshtml
@@ -7,6 +7,7 @@
     ViewBag.nd = "Danh sách đại lý";
     QuanLyDLEntities2 database = new QuanLyDLEntities2();
     List<PhieuCongNo> congno = database.PhieuCongNoes.ToList();
+    List<DonHang> donhang = database.DonHangs.ToList();
 }
 <link href="~/Views/KeToan/Layout/ketoan.css" rel="stylesheet" />
 <div class="row">
@@ -42,8 +43,8 @@
                                         <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Mã đại lý: activate to sort column ascending" style="width: 50px;">Mã đại lý</th>
                                         <th width="300" class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Tên đại lý:: activate to sort column ascending" style="width: 150px;">Tên đại lý</th>
                                         <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="SĐT: activate to sort column ascending" style="width: 160px;">Loại đại lý</th>
-                                        <th width="300" class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Tên đại lý:: activate to sort column ascending" style="width: 150px;">Tổng công nợ</th>
-                                        <th width="100" class="sorting" tabindex="0" rowspan="1" colspan="1" aria-label="Tính năng: activate to sort column ascending" style="width: 80px;">Chức năng</th>
+                                        @*<th width="300" class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Tên đại lý:: activate to sort column ascending" style="width: 150px;">Tổng công nợ</th>*@
+                                        <th width="100" class="sorting" tabindex="0" rowspan="1" colspan="1" aria-label="Tính năng: activate to sort column ascending" style="width: 100px;">Chức năng</th>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -63,7 +64,7 @@
                                             }
                                             @Html.DisplayFor(modelItem => tenldk.TenDaiLy)
                                         </td>
-                                        <td>
+                                        @*<td>
                                             @{
                                                 var tongno = 0;
                                                 for (int i = 0; i < congno.Count; i++)
@@ -78,22 +79,42 @@
                                             @{ var ThanhTien = string.Format("{0:0,0 vnđ}",tongno);}
                                             @Html.DisplayFor(modelItem => ThanhTien)
                                          
-                                        </td>
+                                        </td>*@
 
-                                        <td>
-
-                                            @*<a href="~/KeToan/CongnoDL/@item.MaDL" class="btn btn-outline-primary btn-sm" ata-toggle="tooltip" title="Danh sách đơn hàng">
+                                        <td >
+                                           @{ 
+                                               var count = 0;
+                                               for (int i = 0; i <donhang.Count ; i++)
+                                               {
+                                                   if (item.MaDL == donhang[i].MaDL && donhang[i].TinhTrangThanhToan=="Chưa thanh toán")
+                                                   {
+                                                       count = count+1;
+                                                   }
+                                               }
+                                           }
+                                            <a href="~/KeToan/CongnoDL/@item.MaDL" class="btn btn-outline-primary btn-sm" ata-toggle="tooltip" title="Danh sách đơn hàng" style="position: relative; display: inline-block;">
                                                 <i class="fa fa-edit"></i>
-                                                <span class="badge">3</span>
-                                            </a>
-                                            <a href="#" class="btn btn-outline-primary btn-sm" ata-toggle="tooltip" title="Chi tiết công nợ">
-                                                <i class="fa fa-receipt"></i>
-                                            </a>*@
 
-                                            <button type="button" class="icon-button">
-                                                <span class="material-icons">notifications</span>
-                                                <span class="icon-button__badge">2</span>
-                                            </button>
+                                                @{
+                                                    if (count > 0)
+                                                    {
+                                                        <span class="badge" style="position: absolute; top: -10px; right: -10px; padding: 5px 10px; border-radius: 50%; background: red;">
+                                                            @Html.DisplayFor(modelItem => count)
+                                                        </span>
+                                                    }
+                                                }
+
+
+
+                                            </a>
+                                                <a href="~/KeToan/DSCongnoDL/@item.MaDL" class="btn btn-outline-primary btn-sm" ata-toggle="tooltip" title="Chi tiết công nợ">
+                                                    <i class="fa fa-receipt"></i>
+
+                                                </a>
+                                         
+                                           
+
+          
 
                                         </td>
                                     </tr>
