--- a/Test02/Views/KeToan/Layout/ketoan.css
+++ b/Test02/Views/KeToan/Layout/ketoan.css
@@ -1,37 +1,23 @@
-﻿
-
-.icon-button {
+﻿.notification {
+    background-color: #555;
+    color: white;
+    text-decoration: none;
+    padding: 15px 26px;
     position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 50px;
-    height: 50px;
-    color: #333333;
-    background: #dddddd;
-    border: none;
-    outline: none;
-    border-radius: 50%;
+    display: inline-block;
+    border-radius: 2px;
 }
 
-    .icon-button:hover {
-        cursor: pointer;
+    .notification:hover {
+        background: red;
     }
 
-    .icon-button:active {
-        background: #cccccc;
+    .notification .badge {
+        position: absolute;
+        top: -10px;
+        right: -10px;
+        padding: 5px 10px;
+        border-radius: 50%;
+        background: red;
+        color: white;
     }
-
-.icon-button__badge {
-    position: absolute;
-    top: -10px;
-    right: -10px;
-    width: 25px;
-    height: 25px;
-    background: red;
-    color: #ffffff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%;
-}
