KT-QLCONGNO-DSDAILY 27/2

--- a/Test02/Views/KeToan/Layout/_LayoutPageKeToan.cshtml
+++ b/Test02/Views/KeToan/Layout/_LayoutPageKeToan.cshtml
@@ -6,8 +6,8 @@
     <title>@ViewBag.Title</title>
     <!-- Main CSS-->
     <link rel="stylesheet" href="~/Content/Test01/main.css">
-    
-    
+
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
     <!-- or -->
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
@@ -17,9 +17,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/2.1.2/sweetalert.min.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.2/jquery-confirm.min.css">
-    
-  
-    
+
+    <script src="~/Views/KeToan/Layout/ketoan.js"></script>
+
+
 </head>
 <body onload="time()" class="app sidebar-mini rtl">
     <!-- Navbar-->
