--- a/Test02/Views/KeToan/DSCongnoDL.cshtml
+++ b/Test02/Views/KeToan/DSCongnoDL.cshtml
@@ -1,64 +1,155 @@
 ﻿@model IEnumerable<Test02.Models.PhieuCongNo>
 
+@using Test02.Models;
 @{
-    ViewBag.Title = "DSCongnoDL";
+    ViewBag.Title = "QLCongno";
     Layout = "~/Views/KeToan/Layout/_LayoutPageKeToan.cshtml";
+    ViewBag.cn = "active";
+    ViewBag.nd = "Danh sách Công nợ";
+    QuanLyDLEntities2 db = new QuanLyDLEntities2();
+    List<HoaDon> ctdh = db.HoaDons.ToList();
 }
 
-<h2>DSCongnoDL</h2>
+@{
+    if (TempData["taocn"] != null)
+    {
+        <script>
+            swal({
+                title: "Tạo phiếu công nợ thành công !!!!",
+                icon: "success",
+                button: "Thoát",
+            });
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.MaCongNo)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.MaDL)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.TienNo)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.HanTra)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.TrangThai)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.NgayLapCN)
-        </th>
-        <th></th>
-    </tr>
+        </script>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.MaCongNo)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.MaDL)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.TienNo)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.HanTra)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.TrangThai)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.NgayLapCN)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
-        </td>
-    </tr>
+    }
+    if (TempData["xoacn"] != null)
+    {
+        <script>
+            swal({
+                title: "Xóa phiếu công nợ thành công !!!!",
+                icon: "success",
+                button: "Thoát",
+            });
+
+        </script>
+
+    }
+    if (TempData["chinhsuacn"] != null)
+    {
+        <script>
+            swal({
+                title: "Chỉnh sửa phiếu công nợ thành công !!!!",
+                icon: "success",
+                button: "Thoát",
+            });
+
+        </script>
+
+    }
 }
 
-</table>
+<div class="row">
+    <div class="col-md-12">
+        <div class="tile">
+            <div class="tile-body">
+
+                <div class="row element-button">
+                    @*<div class="col-sm-2">
+                            <a class="btn btn-delete btn-sm nhap-tu-file" href="~/KeToan/ThemCongno "><i class="fas fa-file-upload"></i> Thêm phiếu công nợ</a>
+                        </div>*@
+                    <div class="col-sm-2">
+                        <a class="btn btn-delete btn-sm print-file js-textareacopybtn" type="button" title="Sao chép" href="#"><i class="fas fa-copy"></i> Làm mới danh sách</a>
+                    </div>
+                    <div class="col-sm-2">
+                        <a class="btn btn-delete btn-sm print-file" type="button" title="In" onclick="myApp.printTable()">
+                            <i class="fas fa-print"></i> In dữ liệu
+                        </a>
+                    </div>
+
+                </div>
+
+                <div class="row">
+                    <div class="col-sm-12">
+                        <table class="table table-hover table-bordered js-copytextarea dataTable no-footer" cellpadding="0" cellspacing="0" border="0" id="sampleTable" role="grid" aria-describedby="sampleTable_info">
+                            @*//Phần render từng dòng trong C#*@
+                            <thead>
+                                <tr role="row">
+                                    <th width="300" class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Mã công nợ: activate to sort column ascending" style="width: 90px;">Mã Công nợ</th>
+                                    <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Tên đại lý: activate to sort column ascending" style="width: 150px;">Tên đại lý</th>
+                                    <th width="300" class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Mã công nợ: activate to sort column ascending" style="width: 90px;">Mã Đại lý</th>
+                                    <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Loại: activate to sort column ascending" style="width: 90px;">Loại đại lý</th>
+                                    <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Tổng nợ: activate to sort column ascending" style="width: 124px;">Tổng nợ</th>
+                                    <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Ngày tạo: activate to sort column ascending" style="width: 124px;">Ngày tạo phiếu:</th>
+                                    <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Hạn trả: activate to sort column ascending" style="width: 124px;">Hạn trả</th>
+                                    <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Tình trạng: activate to sort column ascending" style="width: 124px;">Tình trạng</th>
+                                    <th width="100" class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Tính năng: activate to sort column ascending" style="width: 200px;">Chức năng</th>
+                                </tr>
+                            </thead>
+
+                            <tbody>
+                                @foreach (var item in Model)
+                                {
+                                    <tr>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.MaCongNo)
+                                        </td>
+                                        <td>
+                                            @{var tendl = db.DaiLies.Find(item.MaDL);
+                                            }
+                                            @Html.DisplayFor(modelItem => tendl.TenDL)
+
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.MaDL)
+                                        </td>
+                                        <td>
+                                            @{var loaidly = db.DaiLies.Find(item.MaDL);
+                                            }
+                                            @Html.DisplayFor(modelItem => loaidly.MaLoaiDL)
+                                        </td>
+
+                                        <td>
+                                            @{ var Tienno = string.Format("{0:0,0 vnđ}", item.TienNo);}
+                                            @Html.DisplayFor(modelItem => Tienno)
+                                        </td>
+                                        <td>
+                                            @{ var ngay = String.Format("{0:d/M/yyyy HH:mm:ss}", item.NgayLapCN); ;}
+                                            @Html.DisplayFor(modelItem => ngay)
+
+
+
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.HanTra)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.TrangThai)
+                                        </td>
+                                        <td>
+                                            <a href="/KeToan/ChinhsuCN/@item.MaCongNo" class="btn btn-primary btn-sm edit">
+                                                <i class="fa fa-edit"></i>
+                                            </a>
+                                            <a href="/KeToan/XoaCN/@item.MaCongNo" class="btn btn-primary btn-sm trash">
+                                                <i class="fas fa-trash-alt"></i>
+                                            </a>
+
+                                            <a href="/KeToan/ChitietCN/@item.MaCongNo" class="btn btn-primary btn-sm add ">
+                                                <i class="fas fa-train"></i>
+                                            </a>
+
+                                        </td>
+                                    </tr>
+                                }
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+
+
