--- a/Test02/Views/KeToan/QLDonThanhToan.cshtml
+++ b/Test02/Views/KeToan/QLDonThanhToan.cshtml
@@ -85,13 +85,13 @@
                                                 </td>
                                                 <td>
 
-                                                    <a href="/KeToan/ChinhsuaHD/@item.MaDH" class="btn btn-outline-primary btn-sm">
+                                                    <a href="/KeToan/ChinhsuaHD/@item.MaDH" class="btn btn-outline-primary btn-sm" ata-toggle="tooltip" title="Chỉnh sửa hóa đơn đơn hàng">
                                                         <i class="fa fa-edit"></i>
                                                     </a>
                                                     @*<a href="/KeToan/XoaHD/@item.MaHD" class="btn btn-primary btn-sm trash">
             <i class="fas fa-trash-alt"></i>
         </a>*@
-                                                    <a href="/KeToan/XuatHDBH/@item.MaDH" class="btn btn-outline-primary btn-sm">
+                                                    <a href="/KeToan/XuatHDBH/@item.MaDH" class="btn btn-outline-primary btn-sm" ata-toggle="tooltip" title="Xuất đơn hàng">
                                                         <i class="fas fa-train"></i>
                                                     </a>
                                                 </td>
