--- a/Test02/Views/KeToan/Layout/_LayoutPageKeToan.cshtml
+++ b/Test02/Views/KeToan/Layout/_LayoutPageKeToan.cshtml
@@ -83,14 +83,14 @@
             </li>
             <li>
                 <a class="app-menu__item @ViewBag.dsdl" href="~/KeToan/DSDaiLy">
-                    <i class='app-menu__icon bx bx bx-id-card'></i><span class="app-menu__label">Danh sách Đại lý</span>
+                    <i class='app-menu__icon bx bx bx-id-card'></i><span class="app-menu__label">Công nợ Đại lý</span>
                 </a>
             </li>
-            <li>
+            @*<li>
                 <a class="app-menu__item @ViewBag.cn" href="~/KeToan/QLCongno">
                     <i class='app-menu__icon bx bx-dollar'></i><span class="app-menu__label">Quản lý Công nợ</span>
                 </a>
-            </li>
+            </li>*@
             <li>
                 <a class="app-menu__item @ViewBag.dthu" href="~/KeToan/Doanhthu">
                     <i class='app-menu__icon bx bx-purchase-tag-alt'></i><span class="app-menu__label">Doanh thu</span>
